Hotfix for the compiler errorprone problem and - finally -working multiple unit tests thanks to maven surefire forkmode.